Change maximum build height from 4096 to 65536.

--- a/.gitignore
+++ b/.gitignore
@@ -22185,3 +22185,114 @@
 /indra/newview/installers/windows/packaged/skins/white_Meta7/textures/toolbar_tab.tga
 /indra/newview/installers/windows/packaged/skins/white_Meta7/textures/up_arrow.png
 /indra/newview/installers/windows/packaged/skins/white_Meta7/textures/white.tga
+/LICENSES/
+/indra/newview/app_settings/mozilla-runtime-linux-i686/
+/indra/newview/vivox-runtime/
+/indra/viewer-linux-i686-release/
+/libraries/i686-linux/include/
+/libraries/i686-linux/lib_debug/libcares.a
+/libraries/i686-linux/lib_release/libGL.a
+/libraries/i686-linux/lib_release/libGLU.a
+/libraries/i686-linux/lib_release/libOSMesa.a
+/libraries/i686-linux/lib_release/libOSMesa16.a
+/libraries/i686-linux/lib_release/libapr-1.a
+/libraries/i686-linux/lib_release/libaprutil-1.a
+/libraries/i686-linux/lib_release/libboost_program_options-gcc33-mt.a
+/libraries/i686-linux/lib_release/libboost_program_options-gcc33.a
+/libraries/i686-linux/lib_release/libboost_program_options-mt.a
+/libraries/i686-linux/lib_release/libboost_regex-gcc33-mt.a
+/libraries/i686-linux/lib_release/libboost_regex-gcc33.a
+/libraries/i686-linux/lib_release/libboost_regex-mt.a
+/libraries/i686-linux/lib_release/libboost_signals-gcc33-mt.a
+/libraries/i686-linux/lib_release/libboost_signals-gcc33.a
+/libraries/i686-linux/lib_release/libboost_signals-mt.a
+/libraries/i686-linux/lib_release/libcares.a
+/libraries/i686-linux/lib_release/libcrypto.a
+/libraries/i686-linux/lib_release/libcurl.a
+/libraries/i686-linux/lib_release/libexpat.a
+/libraries/i686-linux/lib_release/libiconv.a
+/libraries/i686-linux/lib_release/libjpeg.a
+/libraries/i686-linux/lib_release/libopenjpeg.a
+/libraries/i686-linux/lib_release/libpng12.a
+/libraries/i686-linux/lib_release/libprofiler.a
+/libraries/i686-linux/lib_release/libspinlock.a
+/libraries/i686-linux/lib_release/libssl.a
+/libraries/i686-linux/lib_release/libstacktrace.a
+/libraries/i686-linux/lib_release/libtcmalloc.a
+/libraries/i686-linux/lib_release/libtcmalloc_minimal.a
+/libraries/i686-linux/lib_release/libxmlrpc-epi.a
+/libraries/i686-linux/lib_release/libz.a
+/libraries/i686-linux/lib_release_client/libELFIO.so
+/libraries/i686-linux/lib_release_client/libGLU.so
+/libraries/i686-linux/lib_release_client/libGLU.so.1
+/libraries/i686-linux/lib_release_client/libGLU.so.1.3.070002
+/libraries/i686-linux/lib_release_client/libSDL-1.2.so
+/libraries/i686-linux/lib_release_client/libSDL-1.2.so.0
+/libraries/i686-linux/lib_release_client/libSDL.so
+/libraries/i686-linux/lib_release_client/libXinerama.so
+/libraries/i686-linux/lib_release_client/libXinerama.so.1
+/libraries/i686-linux/lib_release_client/libalut.so
+/libraries/i686-linux/lib_release_client/libapr-1.so
+/libraries/i686-linux/lib_release_client/libapr-1.so.0
+/libraries/i686-linux/lib_release_client/libaprutil-1.so
+/libraries/i686-linux/lib_release_client/libaprutil-1.so.0
+/libraries/i686-linux/lib_release_client/libatk-1.0.so
+/libraries/i686-linux/lib_release_client/libboost_program_options-mt.a
+/libraries/i686-linux/lib_release_client/libboost_regex-mt.a
+/libraries/i686-linux/lib_release_client/libboost_signals-mt.a
+/libraries/i686-linux/lib_release_client/libcares.a
+/libraries/i686-linux/lib_release_client/libcrypto.so
+/libraries/i686-linux/lib_release_client/libcrypto.so.0.9.7
+/libraries/i686-linux/lib_release_client/libcurl.a
+/libraries/i686-linux/lib_release_client/libdb-4.2.so
+/libraries/i686-linux/lib_release_client/libexpat.so
+/libraries/i686-linux/lib_release_client/libexpat.so.1
+/libraries/i686-linux/lib_release_client/libfmod-3.75.so
+/libraries/i686-linux/lib_release_client/libfontconfig.so
+/libraries/i686-linux/lib_release_client/libfreetype.a
+/libraries/i686-linux/lib_release_client/libgdk-x11-2.0.so
+/libraries/i686-linux/lib_release_client/libgdk_pixbuf-2.0.so
+/libraries/i686-linux/lib_release_client/libglib-2.0.so
+/libraries/i686-linux/lib_release_client/libgmodule-2.0.so
+/libraries/i686-linux/lib_release_client/libgobject-2.0.so
+/libraries/i686-linux/lib_release_client/libgthread-2.0.so
+/libraries/i686-linux/lib_release_client/libgtk-x11-2.0.so
+/libraries/i686-linux/lib_release_client/libgtk-x11-2.0.so.0.400.14
+/libraries/i686-linux/lib_release_client/libjpeg.a
+/libraries/i686-linux/lib_release_client/libllmozlib2.a
+/libraries/i686-linux/lib_release_client/libmozjs.so
+/libraries/i686-linux/lib_release_client/libndofdev.a
+/libraries/i686-linux/lib_release_client/libnspr4.so
+/libraries/i686-linux/lib_release_client/libogg.a
+/libraries/i686-linux/lib_release_client/libopenal.so
+/libraries/i686-linux/lib_release_client/libopenjpeg.so
+/libraries/i686-linux/lib_release_client/libopenjpeg.so.1.3
+/libraries/i686-linux/lib_release_client/libopenjpeg.so.1.3.0
+/libraries/i686-linux/lib_release_client/libpango-1.0.so
+/libraries/i686-linux/lib_release_client/libpangoft2-1.0.so
+/libraries/i686-linux/lib_release_client/libpangox-1.0.so
+/libraries/i686-linux/lib_release_client/libpangoxft-1.0.so
+/libraries/i686-linux/lib_release_client/libplc4.so
+/libraries/i686-linux/lib_release_client/libplds4.so
+/libraries/i686-linux/lib_release_client/libpng12.a
+/libraries/i686-linux/lib_release_client/libprofdirserviceprovider_s.a
+/libraries/i686-linux/lib_release_client/libssl.so
+/libraries/i686-linux/lib_release_client/libssl.so.0.9.7
+/libraries/i686-linux/lib_release_client/libstacktrace.so
+/libraries/i686-linux/lib_release_client/libstacktrace.so.0
+/libraries/i686-linux/lib_release_client/libstacktrace.so.0.0
+/libraries/i686-linux/lib_release_client/libtcmalloc.so
+/libraries/i686-linux/lib_release_client/libtcmalloc.so.0
+/libraries/i686-linux/lib_release_client/libtcmalloc.so.0.0
+/libraries/i686-linux/lib_release_client/libuuid.so
+/libraries/i686-linux/lib_release_client/libvorbis.a
+/libraries/i686-linux/lib_release_client/libvorbisenc.a
+/libraries/i686-linux/lib_release_client/libvorbisfile.a
+/libraries/i686-linux/lib_release_client/libxmlrpc-epi.a
+/libraries/i686-linux/lib_release_client/libxul.so
+/libraries/i686-linux/lib_release_client/libz.so.1
+/libraries/include/boost/
+/libraries/include/fmod.h
+/libraries/include/fmod_errors.h
+/libraries/include/fmoddyn.h
+/libraries/include/wincompat.h
